z-index help fix css

--- a/src/components/UI/Title_Panel/style.css
+++ b/src/components/UI/Title_Panel/style.css
@@ -25,6 +25,7 @@
   color: white;
   font-size: 24px;
   position: fixed;
+  z-index: 99;
   top:0%;
   height: 60px;
   width: 100%;
